--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -14,7 +14,11 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
     .option{
-        padding: 10px 15px;    }
+        padding: 10px 15px;    
+        cursor: pointer;
+        text-transform: uppercase;
+    }
     }
 }
